--- a/GeneralStoreMVC/GeneralStoreMVC.csproj
+++ b/GeneralStoreMVC/GeneralStoreMVC.csproj
@@ -175,6 +175,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202103271353310_InitialCreate.cs" />
+    <Compile Include="Migrations\202103271353310_InitialCreate.Designer.cs">
+      <DependentUpon>202103271353310_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202103272018217_InitialMigration.cs" />
+    <Compile Include="Migrations\202103272018217_InitialMigration.Designer.cs">
+      <DependentUpon>202103272018217_InitialMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -264,6 +273,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202103271353310_InitialCreate.resx">
+      <DependentUpon>202103271353310_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103272018217_InitialMigration.resx">
+      <DependentUpon>202103272018217_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
