--- a/GeneralStoreMVC/GeneralStoreMVC.csproj
+++ b/GeneralStoreMVC/GeneralStoreMVC.csproj
@@ -264,6 +264,7 @@
     <Content Include="Views\Customer\Edit.cshtml" />
     <Content Include="Views\Customer\Details.cshtml" />
     <Content Include="Views\Transaction\Create.cshtml" />
+    <Content Include="Views\Transaction\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
