--- a/GeneralStoreMVC/GeneralStoreMVC.csproj
+++ b/GeneralStoreMVC/GeneralStoreMVC.csproj
@@ -188,6 +188,10 @@
     <Compile Include="Migrations\202103291537029_transaction migratin.Designer.cs">
       <DependentUpon>202103291537029_transaction migratin.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202103292100516_DateTimeUpdate.cs" />
+    <Compile Include="Migrations\202103292100516_DateTimeUpdate.Designer.cs">
+      <DependentUpon>202103292100516_DateTimeUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -265,6 +269,7 @@
     <Content Include="Views\Customer\Details.cshtml" />
     <Content Include="Views\Transaction\Create.cshtml" />
     <Content Include="Views\Transaction\Index.cshtml" />
+    <Content Include="Views\Transaction\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -291,6 +296,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202103291537029_transaction migratin.resx">
       <DependentUpon>202103291537029_transaction migratin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103292100516_DateTimeUpdate.resx">
+      <DependentUpon>202103292100516_DateTimeUpdate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
